<resources>
    <string name="app_name">HealthCare</string>

    <string name="cancel">cancel</string>
    <string name="ok">ok</string>

    <!-- BC401 -->
    <string name="bluetooth_con">蓝牙连接</string>
    <string name="bluetooth_status">蓝牙状态:</string>
    <string name="bluetooth_open">蓝牙打开</string>
    <string name="bluetooth_open_fail">蓝牙打开失败</string>
    <string name="bluetooth_discoverying">蓝牙搜索</string>
    <string name="bluetooth_connecting">蓝牙连接中</string>
    <string name="bluetooth_connected">蓝牙已连接</string>
    <string name="bluetooth_connect_fail">蓝牙连接失败</string>
    <string name="bluetooth_discoveryed">发现蓝牙</string>
    <string name="bluetooth_discovery_time_out">搜索蓝牙失败</string>

    <string name="get_urine_data">获取纪录</string>
    <string name="synch_time">同步时间</string>
    <string name="test_urine">测量</string>
    <string name="off_device">关机</string>
    <string name="clear_screen">清屏</string>
    <string name="del_urine_record">删除纪录</string>
    <string name="unbond_device">解绑设备</string>
    <string name="input_urine_sn">输入设备条形码下的4位数字</string>
    <string name="input_sn_err">输入序列号错误</string>
    <string name="bond_dev_sn">绑定设备序列号：</string>
    <string name="no_data">无数据纪录</string>
    <string name="del_data_success">删除数据纪录成功</string>
    <string name="synch_time_success">同步时间成功</string>

    <string name="const_spo2_text">SPO2</string>
    <string name="const_spo2_unit_text">%</string>
    <string name="const_pr_text">PR</string>
    <string name="const_pr_unit_text">bmp</string>
    <string name="const_pi_text">PI</string>
    <string name="connect">连接</string>
    <string name="disconnect">断开连接</string>

</resources>
