<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ll_watch_content"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gridviewbg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="vertical">

                    <TextView
                        style="@style/realplay_info"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/const_spo2_text" />

                    <TextView
                        style="@style/realplay_info"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/const_spo2_unit_text" />
                </LinearLayout>

                <TextView
                    android:id="@+id/realplay_spo2_spo2"
                    style="@style/realplay_data_big"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textColor="@color/data_spo2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/blueState"
                    style="@style/realplay_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/realplay_spo2_battery"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="invisible" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="vertical">

                    <TextView
                        style="@style/realplay_info"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/const_pr_text" />

                    <TextView
                        style="@style/realplay_info"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/const_pr_unit_text" />
                </LinearLayout>

                <TextView
                    android:id="@+id/realplay_spo2_pr"
                    style="@style/realplay_data_big"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textColor="@color/data_pr" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        style="@style/realplay_info"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/const_pi_text" />

                    <TextView
                        style="@style/realplay_info"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/const_spo2_unit_text" />
                </LinearLayout>

                <TextView
                    android:id="@+id/realplay_spo2_pi"
                    style="@style/realplay_data_small"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textColor="@color/data_temp" />
            </LinearLayout>
        </LinearLayout>

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="30dp"-->
        <!--android:layout_marginBottom="5dp"-->
        <!--android:layout_marginLeft="20dp"-->
        <!--android:layout_marginRight="20dp"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:orientation="vertical" >-->

        <!--&lt;!&ndash;             <TextView-->
        <!--android:id="@+id/realplay_spo2_pro_text"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_vertical"-->
        <!--android:scrollHorizontally="true"-->
        <!--android:maxLines="1"-->
        <!--android:gravity="center_vertical"-->
        <!--android:text="@string/measure_spo2_progress"-->
        <!--android:textColor="#555"-->
        <!--android:textSize="14dp" /> &ndash;&gt;-->

        <!--&lt;!&ndash;             <ProgressBar-->
        <!--android:id="@+id/realplay_spo2_pro"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="5dp" /> &ndash;&gt;-->
        <!--</LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="18dp"
                android:layout_weight="9"
                android:background="@color/bg_skyblue">

                <com.fanny.healthcare.draw.BackGround
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:paddingTop="20dp" />


                <com.fanny.healthcare.draw.DrawThreadNW2
                    android:id="@+id/realplay_spo2_draw_wave"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp" />

            </FrameLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/realplay_spo2_pulse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/mainheart_ok"
                    android:visibility="invisible" />

                <com.fanny.healthcare.draw.DrawPC300SPO2Rect
                    android:id="@+id/realplay_spo2_draw_rect"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/realplay_spo2_pulse"
                    android:layout_marginTop="10dp"
                    ></com.fanny.healthcare.draw.DrawPC300SPO2Rect>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnConn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_bg"
                    android:text="@string/connect"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnDiscon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_bg"
                    android:text="@string/disconnect"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn_save_znsh"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_bg"
                    android:text="保存数据"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="20sp" />

                <!--                <TextView
                                   style="@style/pb_child_title"
                                   android:layout_width="0dp"
                                   android:layout_height="wrap_content"
                                   android:layout_weight="1"
                                   android:text="@string/const_spo2_textandunit"
                                   android:textColor="@color/data_spo2" />

                               <TextView
                                   style="@style/pb_child_title"
                                   android:layout_width="0dp"
                                   android:layout_height="wrap_content"
                                   android:layout_weight="1"
                                   android:text="@string/const_pr_textandunit"
                                   android:textColor="@color/data_pr" />

                               <TextView
                                   style="@style/pb_child_title"
                                   android:layout_width="0dp"
                                   android:layout_height="wrap_content"
                                   android:layout_weight="1"
                                   android:text="@string/const_pi_textandunit"
                                   android:textColor="@color/data_pr" /> -->

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/ll_blu_dis"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="蓝牙连接状态:"
            android:textSize="30sp" />
        <TextView
            android:id="@+id/tv_sm_con"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="蓝牙搜索中..."/>
    </LinearLayout>
</FrameLayout>